chore(CSS): fixed element alignments

--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,8 @@ body {
   font-family: Poppins, sans-serif;
   background-color: #f0f0f0;
   color: #333;
+  margin: 0;
+  padding: 20px;
 }
 
 .highlight {
@@ -18,11 +20,9 @@ input.error {
   font-family: Poppins, sans-serif;
   font-size: 1.5em;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
-  gap: 10px;
-  margin: auto;
-  max-width: 800px;
-  width: 90%;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  margin: 40px 100px 0;
 }
 
 #timer,
@@ -30,7 +30,6 @@ input.error {
 #high-score,
 #message {
   font-size: 1em;
-  padding-top: 20px;
   text-align: center;
 }
 
@@ -40,11 +39,13 @@ input.error {
   align-items: center;
 }
 
-#start {
+#start,
+#toggle-dark {
   font-family: Poppins, sans-serif;
   padding: 10px 20px;
   font-size: 16px;
-  margin-left: 20px;
+  margin-top: 10px;
+  margin-left: 30px;
   cursor: pointer;
   border-radius: 50px;
   background-color: #000000;
@@ -52,36 +53,6 @@ input.error {
   border: 5px solid #d6b602f3;
   border-style: inset;
   font-weight: 700;
-}
-#toggle-dark {
-  font-family: Poppins, sans-serif;
-  padding: 20px 12px;
-  font-size: 16px;
-  margin-top: 30px;
-  cursor: pointer;
-  border-radius: 50px;
-  background-color: #000000;
-  color: #ffffff;
-  border: 5px solid #d6b602f3;
-  border-style: inset;
-  font-weight: 700;
-  transition: background-color 0.3s, color 0.3s;
-}
-
-#heading h1,
-#heading p {
-  width: 100%;
-  text-align: center;
-  display: inline-block;
-  margin-top: -10px;
-  margin-left: -70px;
-}
-
-#container {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
 }
 
 /* 🌑 Dark mode styles */
@@ -110,15 +81,24 @@ input:disabled {
   cursor: not-allowed;
 }
 
-.label {
+#heading {
   text-align: center;
-  margin: 0 auto 20px;
+  margin-top: -30px;
+}
+
+#bold-heading {
+  font-weight: bold;
+  font-size: 1.6em;
+  margin-bottom: -2px;
+}
+
+.label {
+  margin: auto;
   font-size: 0.8em;
 }
 
 #textbox {
-  width: 90%;
-  max-width: 600px;
+  width: 60%;
   height: 200px;
   padding: 30px 25px;
   font-size: 1.2em;
